# Bitty

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: 3-Body.bitty  Leibniz.bitty
cmake/: BittyConfig.cmake.in
grammar/: Bitty.g4
scripts/: bench.py
src/: CMakeLists.txt
src/cli/: main.cpp
src/common/: AST.cpp  AST.hpp  Bytecode.cpp  Bytecode.hpp  Common.hpp  IL.cpp  IL.hpp  LiteralValue.cpp  LiteralValue.hpp  Type.hpp
src/compiler/: AST2IL.cpp  AST2IL.hpp  ConstantPropagation.cpp  ConstantPropagation.hpp  IL2Bytecode.cpp  IL2Bytecode.hpp  ILOptimize.cpp  ILOptimize.hpp  Lowering.cpp  TypeInference.cpp  TypeInference.hpp
src/core/: AST.cpp  AST.hpp  ASTBuilder.cpp  ASTBuilder.hpp  BCInterpreter.cpp  BCInterpreter.hpp  Bytecode.cpp  Bytecode.hpp  ConstantPropagation.cpp  ConstantPropagation.hpp  IL.cpp  IL.hpp  IL2Bytecode.cpp  IL2Bytecode.hpp  ILOptimize.cpp  ILOptimize.hpp  Interpreter.cpp  Interpreter.hpp  LiteralValue.cpp  Lowering.cpp  Lowering.hpp  TypeInference.cpp  TypeInference.hpp
src/frontend/: ASTBuilder.cpp  ASTBuilder.hpp
src/interpreter/: Interpreter.cpp  Interpreter.hpp
src/vm/: BCInterpreter.cpp  BCInterpreter.hpp
tests/: ASTTest.cpp  CaseTests.cpp  ConstantPropagationTest.cpp  ILLoweringTest.cpp  ILOptimizeTest.cpp  InterpreterTest.cpp
tests/inputs/: AssignmentChain.bitty  AssociativityAndParens.bitty  ComparisonsAndEquality.bitty  Fibonacci.bitty  FuncDecl_ControlFlow.bitty  FuncDecl_Simple.bitty  FuncDecl_SimpleMore.bitty  FuncDecl_WithControlFlow.bitty  IfElseChainAndDanglingElse.bitty  IfElseSimple.bitty  Leibniz_nonsym.bitty  LiteralsAndVars.bitty  LogicalAndOr_nonsym.bitty  MixedProgram.bitty  MixedWithPrint.bitty  Newton.bitty  PrecedenceBasic.bitty  PrintBasics.bitty  ShapeAndVerifySimple.bitty  StringsCorner.bitty  Tak.bitty  WhileBareAndBlock.bitty  cseCommutativityGuard_noast.bitty  cse_MulSquares.bitty  cse_NestedIfThenHoist.bitty  cse_StringsRepeatConcat.bitty  cse_TwoPrintsAndReassign.bitty  cse_UnaryNegate.bitty  cse_WhileBody.bitty  inline_NotAppliedMultiReturn.bitty  inline_NotAppliedTrailingStmt.bitty  inline_SingleUseValue.bitty
tests/outputs/cp/: 3Body.il  AssignmentChain.il  AssociativityAndParens.il  ComparisonsAndEquality.il  Fibonacci.il  FuncDecl_ControlFlow.il  FuncDecl_WithControlFlow.il  IfElseSimple.il  Leibniz_nonsym.il  LiteralsAndVars.il  LogicalAndOr_nonsym.il  MixedProgram.il  MixedWithPrint.il  Newton.il  PrecedenceBasic.il  PrintBasics.il  ShapeAndVerifySimple.il  Tak.il  cseCommutativityGuard_noast.il  cse_MulSquares.il  cse_NestedIfThenHoist.il  cse_StringsRepeatConcat.il  cse_TwoPrintsAndReassign.il  cse_UnaryNegate.il  cse_WhileBody.il  inline_NotAppliedMultiReturn.il  inline_NotAppliedTrailingStmt.il  inline_SingleUseValue.il
tests/outputs/il/: 3Body.il  AssignmentChain.il  CallsSimpleAndNested.il  FuncDecl_ControlFlow.il  IfElseChainAndDanglingElse.il  IfElseSimple.il  Leibniz_nonsym.il  LogicalAndOr_nonsym.il  MixedProgram.il  MixedWithPrint.il  Newton.il  PrecedenceBasic.il  PrintBasics.il  ShapeAndVerifySimple.il  WhileBareAndBlock.il  cse_MulSquares.il  cse_NestedIfThenHoist.il  cse_StringsRepeatConcat.il  cse_TwoPrintsAndReassign.il  cse_UnaryNegate.il  inline_NotAppliedTrailingStmt.il  inline_SingleUseValue.il
tests/outputs/opt/: 3Body.il  AssignmentChain.il  AssociativityAndParens.il  ComparisonsAndEquality.il  Fibonacci.il  FuncDecl_Simple.il  FuncDecl_SimpleMore.il  FuncDecl_WithControlFlow.il  IfElseSimple.il  Leibniz_nonsym.il  LiteralsAndVars.il  MixedProgram.il  MixedWithPrint.il  Newton.il  PrecedenceBasic.il  ShapeAndVerifySimple.il  StringsCorner.il  cseCommutativityGuard_noast.il  cse_MulSquares.il  cse_NestedIfThenHoist.il  cse_StringsRepeatConcat.il  cse_UnaryNegate.il  cse_WhileBody.il  inline_NotAppliedMultiReturn.il  inline_SingleUseValue.il
tests/outputs/typedil/: 3Body.il  AssignmentChain.il  AssociativityAndParens.il  ComparisonsAndEquality.il  Fibonacci.il  FuncDecl_ControlFlow.il  FuncDecl_EmptyParamsBody.il  FuncDecl_SimpleMore.il  FuncDecl_WithControlFlow.il  IfElseChainAndDanglingElse.il  IfElseSimple.il  Leibniz_nonsym.il  LiteralsAndVars.il  LogicalAndOr_nonsym.il  MixedProgram.il  MixedWithPrint.il  Newton.il  PrecedenceBasic.il  PrintBasics.il  ShapeAndVerifySimple.il  StringsCorner.il  Tak.il  WhileBareAndBlock.il  cseCommutativityGuard_noast.il  cse_MulSquares.il  cse_NestedIfThenHoist.il  cse_StringsRepeatConcat.il  cse_TwoPrintsAndReassign.il  cse_UnaryNegate.il  cse_WhileBody.il  inline_NotAppliedMultiReturn.il  inline_NotAppliedTrailingStmt.il  inline_SingleUseValue.il
tests/utils/: ASTEqual.hpp  ILVerify.cpp  ILVerify.hpp  TestUtils.hpp
